[package]
name = "ttchd"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
dirs = "6"
chrono = "0.4"
